--- a/src/content/docs/components/avatar.mdx
+++ b/src/content/docs/components/avatar.mdx
@@ -10,13 +10,12 @@ docs: https://kobalte.dev/docs/core/components/image
 apiReference: https://kobalte.dev/docs/core/components/image#api-reference
 ---
 
-import AvatarCode from "/src/registry/items/ui/avatar.tsx?raw"
-import AvatarDemoCode from "/src/registry/items/examples/avatar-demo.tsx?raw"
-import AvatarDemo from "/src/registry/items/examples/avatar-demo.tsx"
-
+import AvatarDemo from "/src/registry/items/examples/avatar-demo.tsx";
+import AvatarDemoCode from "/src/registry/items/examples/avatar-demo.tsx?raw";
+import AvatarCode from "/src/registry/items/ui/avatar.tsx?raw";
 
 <PreviewTabs demoCode={AvatarDemoCode}>
-    <AvatarDemo client:only="solid-js" /> 
+  <AvatarDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
