--- a/src/content/docs/components/badge-delta.mdx
+++ b/src/content/docs/components/badge-delta.mdx
@@ -8,13 +8,12 @@ next: components/breadcrumb
 nextLabel: Breadcrumb
 ---
 
-import BadgeDeltaCode from "/src/registry/items/ui/badge-delta.tsx?raw"
-import BadgeDeltaDemoCode from "/src/registry/items/examples/badge-delta-demo.tsx?raw"
-import BadgeDeltaDemo from "/src/registry/items/examples/badge-delta-demo.tsx"
-
+import BadgeDeltaDemo from "/src/registry/items/examples/badge-delta-demo.tsx";
+import BadgeDeltaDemoCode from "/src/registry/items/examples/badge-delta-demo.tsx?raw";
+import BadgeDeltaCode from "/src/registry/items/ui/badge-delta.tsx?raw";
 
 <PreviewTabs demoCode={BadgeDeltaDemoCode}>
-    <BadgeDeltaDemo client:only="solid-js" /> 
+  <BadgeDeltaDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
