--- a/src/content/docs/components/badge.mdx
+++ b/src/content/docs/components/badge.mdx
@@ -8,12 +8,12 @@ next: components/badge-delta
 nextLabel: Badge Delta
 ---
 
-import BadgeCode from "/src/registry/items/ui/badge.tsx?raw"
-import BadgeDemoCode from "/src/registry/items/examples/badge-demo.tsx?raw"
-import BadgeDemo from "/src/registry/items/examples/badge-demo.tsx"
+import BadgeDemo from "/src/registry/items/examples/badge-demo.tsx";
+import BadgeDemoCode from "/src/registry/items/examples/badge-demo.tsx?raw";
+import BadgeCode from "/src/registry/items/ui/badge.tsx?raw";
 
 <PreviewTabs demoCode={BadgeDemoCode}>
-    <BadgeDemo client:only="solid-js" /> 
+  <BadgeDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
