--- a/src/content/docs/components/card.mdx
+++ b/src/content/docs/components/card.mdx
@@ -8,12 +8,12 @@ next: components/carousel
 nextLabel: Carousel
 ---
 
-import CardCode from "/src/registry/items/ui/card.tsx?raw"
-import CardDemo from "/src/registry/items/examples/card-demo.tsx"
-import CardDemoCode from "/src/registry/items/examples/card-demo.tsx?raw"
+import CardDemo from "/src/registry/items/examples/card-demo.tsx";
+import CardDemoCode from "/src/registry/items/examples/card-demo.tsx?raw";
+import CardCode from "/src/registry/items/ui/card.tsx?raw";
 
 <PreviewTabs demoCode={CardDemoCode}>
-    <CardDemo client:only="solid-js" /> 
+  <CardDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
