--- a/src/content/docs/components/collapsible.mdx
+++ b/src/content/docs/components/collapsible.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/collapsible
 apiReference: https://kobalte.dev/docs/core/components/collapsible#api-reference
 ---
 
-import CollapsibleCode from "/src/registry/items/ui/collapsible.tsx?raw"
-import CollapsibleDemoCode from "/src/registry/items/examples/collapsible-demo.tsx?raw"
-import CollapsibleDemo from "/src/registry/items/examples/collapsible-demo.tsx"
+import CollapsibleDemo from "/src/registry/items/examples/collapsible-demo.tsx";
+import CollapsibleDemoCode from "/src/registry/items/examples/collapsible-demo.tsx?raw";
+import CollapsibleCode from "/src/registry/items/ui/collapsible.tsx?raw";
 
 <PreviewTabs demoCode={CollapsibleDemoCode}>
-    <CollapsibleDemo client:only="solid-js" /> 
+  <CollapsibleDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -40,4 +40,3 @@ import {
   </CollapsibleContent>
 </Collapsible>
 ```
-
