--- a/src/content/docs/components/combobox.mdx
+++ b/src/content/docs/components/combobox.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/combobox
 apiReference: https://kobalte.dev/docs/core/components/combobox#api-reference
 ---
 
-import ComboboxCode from "/src/registry/items/ui/combobox.tsx?raw"
-import ComboboxDemoCode from "/src/registry/items/examples/combobox-demo.tsx?raw"
-import ComboboxDemo from "/src/registry/items/examples/combobox-demo.tsx"
+import ComboboxDemo from "/src/registry/items/examples/combobox-demo.tsx";
+import ComboboxDemoCode from "/src/registry/items/examples/combobox-demo.tsx?raw";
+import ComboboxCode from "/src/registry/items/ui/combobox.tsx?raw";
 
 <PreviewTabs demoCode={ComboboxDemoCode}>
-    <ComboboxDemo client:only="solid-js" /> 
+  <ComboboxDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
