--- a/src/content/docs/components/dropdown-menu.mdx
+++ b/src/content/docs/components/dropdown-menu.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/dropdown-menu
 apiReference: https://kobalte.dev/docs/core/components/dropdown-menu#api-reference
 ---
 
-import DropdownMenuCode from "/src/registry/items/ui/dropdown-menu.tsx?raw"
-import DropdownMenuDemoCode from "/src/registry/items/examples/dropdown-menu-demo.tsx?raw"
-import DropdownMenuDemo from "/src/registry/items/examples/dropdown-menu-demo.tsx"
+import DropdownMenuDemo from "/src/registry/items/examples/dropdown-menu-demo.tsx";
+import DropdownMenuDemoCode from "/src/registry/items/examples/dropdown-menu-demo.tsx?raw";
+import DropdownMenuCode from "/src/registry/items/ui/dropdown-menu.tsx?raw";
 
 <PreviewTabs demoCode={DropdownMenuDemoCode}>
-    <DropdownMenuDemo client:only="solid-js" /> 
+  <DropdownMenuDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -58,4 +58,3 @@ import {
   </DropdownMenuContent>
 </DropdownMenu>
 ```
-
