--- a/src/content/docs/components/number-field.mdx
+++ b/src/content/docs/components/number-field.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/number-field
 apiReference: https://kobalte.dev/docs/core/components/number-field#api-reference
 ---
 
-import NumberFieldCode from "/src/registry/items/ui/number-field.tsx?raw"
-import NumberFieldDemoCode from "/src/registry/items/examples/number-field-demo.tsx?raw"
-import NumberFieldDemo from "/src/registry/items/examples/number-field-demo.tsx"
+import NumberFieldDemo from "/src/registry/items/examples/number-field-demo.tsx";
+import NumberFieldDemoCode from "/src/registry/items/examples/number-field-demo.tsx?raw";
+import NumberFieldCode from "/src/registry/items/ui/number-field.tsx?raw";
 
 <PreviewTabs demoCode={NumberFieldDemoCode}>
-    <NumberFieldDemo client:only="solid-js" /> 
+  <NumberFieldDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
