--- a/src/content/docs/components/otp-field.mdx
+++ b/src/content/docs/components/otp-field.mdx
@@ -10,12 +10,12 @@ docs: https://corvu.dev/docs/primitives/otp-field/
 apiReference: https://corvu.dev/docs/primitives/otp-field#api-reference
 ---
 
-import OTPFieldCode from "/src/registry/items/ui/otp-field.tsx?raw"
-import OTPFieldDemoCode from "/src/registry/items/examples/otp-field-demo.tsx?raw"
-import OTPFieldDemo from "/src/registry/items/examples/otp-field-demo.tsx"
+import OTPFieldDemo from "/src/registry/items/examples/otp-field-demo.tsx";
+import OTPFieldDemoCode from "/src/registry/items/examples/otp-field-demo.tsx?raw";
+import OTPFieldCode from "/src/registry/items/ui/otp-field.tsx?raw";
 
 <PreviewTabs demoCode={OTPFieldDemoCode}>
-    <OTPFieldDemo client:only="solid-js" /> 
+  <OTPFieldDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
