--- a/src/content/docs/components/pagination.mdx
+++ b/src/content/docs/components/pagination.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/pagination
 apiReference: https://kobalte.dev/docs/core/components/pagination#api-reference
 ---
 
-import PaginationCode from "/src/registry/items/ui/pagination.tsx?raw"
-import PaginationDemoCode from "/src/registry/items/examples/pagination-demo.tsx?raw"
-import PaginationDemo from "/src/registry/items/examples/pagination-demo.tsx"
+import PaginationDemo from "/src/registry/items/examples/pagination-demo.tsx";
+import PaginationDemoCode from "/src/registry/items/examples/pagination-demo.tsx?raw";
+import PaginationCode from "/src/registry/items/ui/pagination.tsx?raw";
 
 <PreviewTabs demoCode={PaginationDemoCode}>
-    <PaginationDemo client:only="solid-js" />
+  <PaginationDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
