--- a/src/content/docs/components/popover.mdx
+++ b/src/content/docs/components/popover.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/popover
 apiReference: https://kobalte.dev/docs/core/components/popover#api-reference
 ---
 
-import PopoverCode from "/src/registry/items/ui/popover.tsx?raw"
-import PopoverDemoCode from "/src/registry/items/examples/popover-demo.tsx?raw"
-import PopoverDemo from "/src/registry/items/examples/popover-demo.tsx"
+import PopoverDemo from "/src/registry/items/examples/popover-demo.tsx";
+import PopoverDemoCode from "/src/registry/items/examples/popover-demo.tsx?raw";
+import PopoverCode from "/src/registry/items/ui/popover.tsx?raw";
 
 <PreviewTabs demoCode={PopoverDemoCode}>
-    <PopoverDemo client:only="solid-js" /> 
+  <PopoverDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
