--- a/src/content/docs/components/radio-group.mdx
+++ b/src/content/docs/components/radio-group.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/radio-group
 apiReference: https://kobalte.dev/docs/core/components/radio-group#api-reference
 ---
 
-import RadioGroupCode from "/src/registry/items/ui/radio-group.tsx?raw"
-import RadioGroupDemoCode from "/src/registry/items/examples/radio-group-demo.tsx?raw"
-import RadioGroupDemo from "/src/registry/items/examples/radio-group-demo.tsx"
+import RadioGroupDemo from "/src/registry/items/examples/radio-group-demo.tsx";
+import RadioGroupDemoCode from "/src/registry/items/examples/radio-group-demo.tsx?raw";
+import RadioGroupCode from "/src/registry/items/ui/radio-group.tsx?raw";
 
 <PreviewTabs demoCode={RadioGroupDemoCode}>
-    <RadioGroupDemo client:only="solid-js" /> 
+  <RadioGroupDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
