--- a/src/content/docs/components/skeleton.mdx
+++ b/src/content/docs/components/skeleton.mdx
@@ -10,21 +10,25 @@ docs: https://kobalte.dev/docs/core/components/skeleton
 apiReference: https://kobalte.dev/docs/core/components/skeleton#api-reference
 ---
 
-import SkeletonCode from "/src/registry/items/ui/skeleton.tsx?raw"
-import SkeletonDemo from "/src/registry/items/examples/skeleton-demo.tsx"
-import SkeletonDemoCode from "/src/registry/items/examples/skeleton-demo.tsx?raw"
-import SkeletonCircle from "/src/registry/items/examples/skeleton-circle.tsx"
-import SkeletonCircleCode from "/src/registry/items/examples/skeleton-circle.tsx?raw"
-import SkeletonNoAnimation from "/src/registry/items/examples/skeleton-no-animation.tsx"
-import SkeletonNoAnimationCode from "/src/registry/items/examples/skeleton-no-animation.tsx?raw"
+import SkeletonCircle from "/src/registry/items/examples/skeleton-circle.tsx";
+import SkeletonCircleCode from "/src/registry/items/examples/skeleton-circle.tsx?raw";
+import SkeletonDemo from "/src/registry/items/examples/skeleton-demo.tsx";
+import SkeletonDemoCode from "/src/registry/items/examples/skeleton-demo.tsx?raw";
+import SkeletonNoAnimation from "/src/registry/items/examples/skeleton-no-animation.tsx";
+import SkeletonNoAnimationCode from "/src/registry/items/examples/skeleton-no-animation.tsx?raw";
+import SkeletonCode from "/src/registry/items/ui/skeleton.tsx?raw";
 
 <PreviewTabs demoCode={SkeletonDemoCode}>
-    <SkeletonDemo client:only="solid-js" /> 
+  <SkeletonDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
 
-<InstallationTabs name="skeleton" dependencies={['@kobalte/core']} code={SkeletonCode} />
+<InstallationTabs
+  name="skeleton"
+  dependencies={["@kobalte/core"]}
+  code={SkeletonCode}
+/>
 
 ## Usage
 
@@ -41,7 +45,7 @@ import { Skeleton } from "~/components/ui/skeleton";
 ### Circle
 
 <PreviewTabs demoCode={SkeletonCircleCode} class="mt-4">
-    <SkeletonCircle client:only="solid-js" />
+  <SkeletonCircle client:only="solid-js" />
 </PreviewTabs>
 
 ### Disable animation
@@ -49,5 +53,5 @@ import { Skeleton } from "~/components/ui/skeleton";
 You can disable animation by setting the `animate` prop to `false`.
 
 <PreviewTabs demoCode={SkeletonNoAnimationCode} class="mt-4">
-    <SkeletonNoAnimation client:only="solid-js" />
+  <SkeletonNoAnimation client:only="solid-js" />
 </PreviewTabs>
