--- a/src/content/docs/components/table.mdx
+++ b/src/content/docs/components/table.mdx
@@ -8,12 +8,12 @@ next: components/tabs
 nextLabel: Tabs
 ---
 
-import TableCode from "/src/registry/items/ui/table.tsx?raw"
-import TableDemoCode from "/src/registry/items/examples/table-demo.tsx?raw"
-import TableDemo from "/src/registry/items/examples/table-demo.tsx"
+import TableDemo from "/src/registry/items/examples/table-demo.tsx";
+import TableDemoCode from "/src/registry/items/examples/table-demo.tsx?raw";
+import TableCode from "/src/registry/items/ui/table.tsx?raw";
 
 <PreviewTabs demoCode={TableDemoCode}>
-    <TableDemo client:only="solid-js" /> 
+  <TableDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
