--- a/src/content/docs/components/timeline.mdx
+++ b/src/content/docs/components/timeline.mdx
@@ -8,12 +8,12 @@ next: components/toggle
 nextLabel: Toggle
 ---
 
-import TimelineCode from "/src/registry/items/ui/timeline.tsx?raw"
-import TimelineDemoCode from "/src/registry/items/examples/timeline-demo.tsx?raw"
-import TimelineDemo from "/src/registry/items/examples/timeline-demo.tsx"
+import TimelineDemo from "/src/registry/items/examples/timeline-demo.tsx";
+import TimelineDemoCode from "/src/registry/items/examples/timeline-demo.tsx?raw";
+import TimelineCode from "/src/registry/items/ui/timeline.tsx?raw";
 
 <PreviewTabs demoCode={TimelineDemoCode}>
-    <TimelineDemo client:only="solid-js" /> 
+  <TimelineDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
