--- a/src/content/docs/components/toggle.mdx
+++ b/src/content/docs/components/toggle.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/toggle-button
 apiReference: https://kobalte.dev/docs/core/components/toggle-button#api-reference
 ---
 
-import ToggleCode from "/src/registry/items/ui/toggle.tsx?raw"
-import ToggleDemoCode from "/src/registry/items/examples/toggle-demo.tsx?raw"
-import ToggleDemo from "/src/registry/items/examples/toggle-demo.tsx"
+import ToggleDemo from "/src/registry/items/examples/toggle-demo.tsx";
+import ToggleDemoCode from "/src/registry/items/examples/toggle-demo.tsx?raw";
+import ToggleCode from "/src/registry/items/ui/toggle.tsx?raw";
 
 <PreviewTabs demoCode={ToggleDemoCode}>
-    <ToggleDemo client:only="solid-js" /> 
+  <ToggleDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -29,6 +29,5 @@ import { Toggle } from "~/components/ui/toggle";
 ```
 
 ```tsx
-<Toggle>
-</Toggle>
+<Toggle></Toggle>
 ```
