--- a/src/content/docs/installation/astro.mdx
+++ b/src/content/docs/installation/astro.mdx
@@ -16,7 +16,7 @@ Start by creating a new Astro app using `create-astro`:
 
 Once you have created the app, navigate into the project:
 
-```bash  showLineNumbers=false
+```bash showLineNumbers=false
 cd {project-name}
 ```
 
@@ -28,7 +28,10 @@ Then add Tailwind CSS and Solid.js to your Astro app using Astro CLI:
 
 ## Add Dependencies
 
-<NpmCommand type="install" command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
+<NpmCommand
+  type="install"
+  command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss"
+/>
 
 ## Configure Path Aliases
 
@@ -184,12 +187,15 @@ The `~` alias is a preference. You can use other aliases such as `@` if you want
 ## Add `cn` Helper Function
 
 ```ts
+import type { ClassValue } from "clsx";
+
+import { clsx } from "clsx";
+import { twMerge } from "tailwind-merge";
+
 // src/lib/utils.ts
-import { clsx, type ClassValue } from "clsx"
-import { twMerge } from "tailwind-merge"
 
 export function cn(...inputs: ClassValue[]) {
-  return twMerge(clsx(inputs))
+  return twMerge(clsx(inputs));
 }
 ```
 
