--- a/src/content/docs/installation/tanstack-start.mdx
+++ b/src/content/docs/installation/tanstack-start.mdx
@@ -12,7 +12,10 @@ nextLabel: Tauri
 
 Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--interactive` and `--framework Solid` parameters to create a new Solid.js project. Select **Solid-UI** and **Start** template when prompted:
 
-<NpmCommand type="create" command="tsrouter-app@latest --interactive --framework Solid" />
+<NpmCommand
+  type="create"
+  command="tsrouter-app@latest --interactive --framework Solid"
+/>
 
 ```bash showLineNumbers=false
 ◆  What add-ons would you like for your project?
@@ -30,7 +33,10 @@ Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--
 
 <NpmCommand type="uninstall" command="tailwindcss-animate" />
 
-<NpmCommand type="install" command="tw-animate-css lucide-solid @kobalte/tailwindcss" />
+<NpmCommand
+  type="install"
+  command="tw-animate-css lucide-solid @kobalte/tailwindcss"
+/>
 
 ## Edit Styles
 
