--- a/src/content/docs/components/callout.mdx
+++ b/src/content/docs/components/callout.mdx
@@ -8,12 +8,12 @@ next: components/card
 nextLabel: Card
 ---
 
-import CalloutCode from "/src/registry/items/ui/callout.tsx?raw"
-import CalloutDemo from "/src/registry/items/examples/callout-demo.tsx"
-import CalloutDemoCode from "/src/registry/items/examples/callout-demo.tsx?raw"
+import CalloutDemo from "/src/registry/items/examples/callout-demo.tsx";
+import CalloutDemoCode from "/src/registry/items/examples/callout-demo.tsx?raw";
+import CalloutCode from "/src/registry/items/ui/callout.tsx?raw";
 
 <PreviewTabs demoCode={CalloutDemoCode}>
-    <CalloutDemo client:only="solid-js" /> 
+  <CalloutDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -23,23 +23,18 @@ import CalloutDemoCode from "/src/registry/items/examples/callout-demo.tsx?raw"
 ## Usage
 
 ```tsx
-import { Callout, CalloutTitle, CalloutContent } from "~/components/ui/callout";
+import { Callout, CalloutContent, CalloutTitle } from "~/components/ui/callout";
 ```
 
 ```tsx
 <Accordion collapsible>
   <AccordionItem value="item-1">
     <AccordionTrigger>Item 1</AccordionTrigger>
-    <AccordionContent>
-      Content for item 1.
-    </AccordionContent>
+    <AccordionContent>Content for item 1.</AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-2">
     <AccordionTrigger>Item 2</AccordionTrigger>
-    <AccordionContent>
-      Content for item 2.
-    </AccordionContent>
+    <AccordionContent>Content for item 2.</AccordionContent>
   </AccordionItem>
 </Accordion>
 ```
-
