--- a/src/content/docs/components/context-menu.mdx
+++ b/src/content/docs/components/context-menu.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/context-menu
 apiReference: https://kobalte.dev/docs/core/components/context-menu#api-reference
 ---
 
-import ContextMenuCode from "/src/registry/items/ui/context-menu.tsx?raw"
-import ContextMenuDemoCode from "/src/registry/items/examples/context-menu-demo.tsx?raw"
-import ContextMenuDemo from "/src/registry/items/examples/context-menu-demo.tsx"
+import ContextMenuDemo from "/src/registry/items/examples/context-menu-demo.tsx";
+import ContextMenuDemoCode from "/src/registry/items/examples/context-menu-demo.tsx?raw";
+import ContextMenuCode from "/src/registry/items/ui/context-menu.tsx?raw";
 
 <PreviewTabs demoCode={ContextMenuDemoCode}>
-    <ContextMenuDemo client:only="solid-js" /> 
+  <ContextMenuDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -27,20 +27,20 @@ import ContextMenuDemo from "/src/registry/items/examples/context-menu-demo.tsx"
 ```tsx
 import {
   ContextMenu,
-  ContextMenuTrigger,
-  ContextMenuPortal,
-  ContextMenuContent,
-  ContextMenuItem,
-  ContextMenuShortcut,
-  ContextMenuSeparator,
-  ContextMenuSub,
-  ContextMenuSubTrigger,
-  ContextMenuSubContent,
   ContextMenuCheckboxItem,
+  ContextMenuContent,
   ContextMenuGroup,
   ContextMenuGroupLabel,
+  ContextMenuItem,
+  ContextMenuPortal,
   ContextMenuRadioGroup,
   ContextMenuRadioItem,
+  ContextMenuSeparator,
+  ContextMenuShortcut,
+  ContextMenuSub,
+  ContextMenuSubContent,
+  ContextMenuSubTrigger,
+  ContextMenuTrigger,
 } from "~/components/ui/context-menu";
 ```
 
@@ -57,4 +57,3 @@ import {
   </ContextMenuContent>
 </ContextMenu>
 ```
-
