--- a/src/content/docs/components/label.mdx
+++ b/src/content/docs/components/label.mdx
@@ -8,12 +8,12 @@ next: components/menubar
 nextLabel: Menubar
 ---
 
-import LabelCode from "/src/registry/items/ui/label.tsx?raw"
-import LabelDemo from "/src/registry/items/examples/label-demo.tsx"
-import LabelDemoCode from "/src/registry/items/examples/label-demo.tsx?raw"
+import LabelDemo from "/src/registry/items/examples/label-demo.tsx";
+import LabelDemoCode from "/src/registry/items/examples/label-demo.tsx?raw";
+import LabelCode from "/src/registry/items/ui/label.tsx?raw";
 
 <PreviewTabs demoCode={LabelDemoCode}>
-    <LabelDemo client:only="solid-js" /> 
+  <LabelDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
