--- a/src/content/docs/components/menubar.mdx
+++ b/src/content/docs/components/menubar.mdx
@@ -10,12 +10,12 @@ docs: https://kobalte.dev/docs/core/components/menubar
 apiReference: https://kobalte.dev/docs/core/components/menubar#api-reference
 ---
 
-import MenubarCode from "/src/registry/items/ui/menubar.tsx?raw"
-import MenubarDemoCode from "/src/registry/items/examples/menubar-demo.tsx?raw"
-import MenubarDemo from "/src/registry/items/examples/menubar-demo.tsx"
+import MenubarDemo from "/src/registry/items/examples/menubar-demo.tsx";
+import MenubarDemoCode from "/src/registry/items/examples/menubar-demo.tsx?raw";
+import MenubarCode from "/src/registry/items/ui/menubar.tsx?raw";
 
 <PreviewTabs demoCode={MenubarDemoCode}>
-    <MenubarDemo client:only="solid-js" /> 
+  <MenubarDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
