--- a/src/content/docs/components/separator.mdx
+++ b/src/content/docs/components/separator.mdx
@@ -10,17 +10,21 @@ docs: https://kobalte.dev/docs/core/components/separator
 apiReference: https://kobalte.dev/docs/core/components/separator#api-reference
 ---
 
-import SeparatorCode from "/src/registry/items/ui/separator.tsx?raw"
-import SeparatorDemo from "/src/registry/items/examples/separator-demo.tsx"
-import SeparatorDemoCode from "/src/registry/items/examples/separator-demo.tsx?raw"
+import SeparatorDemo from "/src/registry/items/examples/separator-demo.tsx";
+import SeparatorDemoCode from "/src/registry/items/examples/separator-demo.tsx?raw";
+import SeparatorCode from "/src/registry/items/ui/separator.tsx?raw";
 
 <PreviewTabs demoCode={SeparatorDemoCode}>
-    <SeparatorDemo client:only="solid-js" /> 
+  <SeparatorDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
 
-<InstallationTabs name="separator" dependencies={['@kobalte/core']} code={SeparatorCode} />
+<InstallationTabs
+  name="separator"
+  dependencies={["@kobalte/core"]}
+  code={SeparatorCode}
+/>
 
 ## Usage
 
