--- a/src/content/docs/components/slider.mdx
+++ b/src/content/docs/components/slider.mdx
@@ -10,14 +10,14 @@ docs: https://kobalte.dev/docs/core/components/slider
 apiReference: https://kobalte.dev/docs/core/components/slider#api-reference
 ---
 
-import SliderCode from "/src/registry/items/ui/slider.tsx?raw"
-import SliderDemoCode from "/src/registry/items/examples/slider-demo.tsx?raw"
-import SliderDemo from "/src/registry/items/examples/slider-demo.tsx"
-import SliderSingle from "/src/registry/items/examples/slider-single.tsx"
-import SliderSingleCode from "/src/registry/items/examples/slider-single.tsx?raw"
+import SliderDemo from "/src/registry/items/examples/slider-demo.tsx";
+import SliderDemoCode from "/src/registry/items/examples/slider-demo.tsx?raw";
+import SliderSingle from "/src/registry/items/examples/slider-single.tsx";
+import SliderSingleCode from "/src/registry/items/examples/slider-single.tsx?raw";
+import SliderCode from "/src/registry/items/ui/slider.tsx?raw";
 
 <PreviewTabs demoCode={SliderDemoCode}>
-    <SliderDemo client:only="solid-js" /> 
+  <SliderDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -51,5 +51,5 @@ import {
 ### Single Value
 
 <PreviewTabs demoCode={SliderSingleCode} class="mt-4">
-    <SliderSingle client:only="solid-js" />
+  <SliderSingle client:only="solid-js" />
 </PreviewTabs>
