--- a/src/content/docs/components/toggle-group.mdx
+++ b/src/content/docs/components/toggle-group.mdx
@@ -10,14 +10,14 @@ docs: https://kobalte.dev/docs/core/components/toggle-group
 apiReference: https://kobalte.dev/docs/core/components/toggle-group#api-reference
 ---
 
-import ToggleGroupCode from "/src/registry/items/ui/toggle-group.tsx?raw"
-import ToggleGroupDemoCode from "/src/registry/items/examples/toggle-group-demo.tsx?raw"
-import ToggleGroupDemo from "/src/registry/items/examples/toggle-group-demo.tsx"
-import ToggleGroupMultiple from "/src/registry/items/examples/toggle-group-multiple.tsx"
-import ToggleGroupMultipleCode from "/src/registry/items/examples/toggle-group-multiple.tsx?raw"
+import ToggleGroupDemo from "/src/registry/items/examples/toggle-group-demo.tsx";
+import ToggleGroupDemoCode from "/src/registry/items/examples/toggle-group-demo.tsx?raw";
+import ToggleGroupMultiple from "/src/registry/items/examples/toggle-group-multiple.tsx";
+import ToggleGroupMultipleCode from "/src/registry/items/examples/toggle-group-multiple.tsx?raw";
+import ToggleGroupCode from "/src/registry/items/ui/toggle-group.tsx?raw";
 
 <PreviewTabs demoCode={ToggleGroupDemoCode}>
-    <ToggleGroupDemo client:only="solid-js" /> 
+  <ToggleGroupDemo client:only="solid-js" />
 </PreviewTabs>
 
 ## Installation
@@ -43,5 +43,5 @@ import { ToggleGroup, ToggleGroupItem } from "~/components/ui/toggle-group";
 ### Multiple Selection
 
 <PreviewTabs demoCode={ToggleGroupMultipleCode} class="mt-4">
-    <ToggleGroupMultiple client:only="solid-js" />
+  <ToggleGroupMultiple client:only="solid-js" />
 </PreviewTabs>
