--- a/src/content/docs/dark-mode/tanstack-router.mdx
+++ b/src/content/docs/dark-mode/tanstack-router.mdx
@@ -18,11 +18,12 @@ Start by installing `solid-mode-watcher`
 
 ```tsx ins={4,26}
 // src/main.tsx
-import { RouterProvider, createRouter } from "@tanstack/solid-router";
 import { render } from "solid-js/web";
+import { createRouter, RouterProvider } from "@tanstack/solid-router";
 import { ModeWatcher } from "solid-mode-watcher";
 
 import { routeTree } from "./routeTree.gen";
+
 import "./styles.css";
 
 const router = createRouter({
@@ -51,7 +52,6 @@ const rootElement = document.getElementById("app");
 if (rootElement) {
   render(() => <App />, rootElement);
 }
-
 ```
 
 ## Add A Mode Toggler
@@ -84,8 +84,13 @@ import Moon from "lucide-solid/icons/moon";
 import Sun from "lucide-solid/icons/sun";
 import { setMode } from "solid-mode-watcher";
 
-import { DropdownMenu, DropdownMenuContent, DropdownMenuItem, DropdownMenuTrigger } from "./ui/dropdown-menu";
 import { Button } from "./ui/button";
+import {
+  DropdownMenu,
+  DropdownMenuContent,
+  DropdownMenuItem,
+  DropdownMenuTrigger,
+} from "./ui/dropdown-menu";
 
 export default function ModeToggle() {
   return (
@@ -96,9 +101,15 @@ export default function ModeToggle() {
         <span class="sr-only">Toggle theme</span>
       </DropdownMenuTrigger>
       <DropdownMenuContent>
-        <DropdownMenuItem onClick={() => setMode("light")}>Light</DropdownMenuItem>
-        <DropdownMenuItem onClick={() => setMode("dark")}>Dark</DropdownMenuItem>
-        <DropdownMenuItem onClick={() => setMode("system")}>System</DropdownMenuItem>
+        <DropdownMenuItem onClick={() => setMode("light")}>
+          Light
+        </DropdownMenuItem>
+        <DropdownMenuItem onClick={() => setMode("dark")}>
+          Dark
+        </DropdownMenuItem>
+        <DropdownMenuItem onClick={() => setMode("system")}>
+          System
+        </DropdownMenuItem>
       </DropdownMenuContent>
     </DropdownMenu>
   );
