--- a/src/content/docs/installation/manual.mdx
+++ b/src/content/docs/installation/manual.mdx
@@ -14,7 +14,10 @@ nextLabel: Components
 
 ## Add Dependencies
 
-<NpmCommand type="install" command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
+<NpmCommand
+  type="install"
+  command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss"
+/>
 
 ## Configure Path Aliases
 
@@ -170,12 +173,15 @@ The `~` alias is a preference. You can use other aliases such as `@` if you want
 ## Add `cn` Helper Function
 
 ```ts
+import type { ClassValue } from "clsx";
+
+import { clsx } from "clsx";
+import { twMerge } from "tailwind-merge";
+
 // src/lib/utils.ts
-import { clsx, type ClassValue } from "clsx"
-import { twMerge } from "tailwind-merge"
 
 export function cn(...inputs: ClassValue[]) {
-  return twMerge(clsx(inputs))
+  return twMerge(clsx(inputs));
 }
 ```
 
