--- a/src/content/docs/installation/tauri.mdx
+++ b/src/content/docs/installation/tauri.mdx
@@ -34,7 +34,7 @@ Start by creating a new Tauri app using `create-tauri-app`. Select **Typescript 
 
 Once you have created the app, navigate into the project and install the dependencies:
 
-```bash  showLineNumbers=false
+```bash showLineNumbers=false
 cd {project-name}
 ```
 
@@ -42,7 +42,10 @@ cd {project-name}
 
 ## Add Tailwind CSS and Dependencies
 
-<NpmCommand type="install" command="tailwindcss @tailwindcss/vite class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
+<NpmCommand
+  type="install"
+  command="tailwindcss @tailwindcss/vite class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss"
+/>
 
 ## Configure Path Aliases
 
@@ -219,12 +222,15 @@ export default defineConfig({
 ## Add `cn` Helper Function
 
 ```ts
+import type { ClassValue } from "clsx";
+
+import { clsx } from "clsx";
+import { twMerge } from "tailwind-merge";
+
 // src/lib/utils.ts
-import { clsx, type ClassValue } from "clsx"
-import { twMerge } from "tailwind-merge"
 
 export function cn(...inputs: ClassValue[]) {
-  return twMerge(clsx(inputs))
+  return twMerge(clsx(inputs));
 }
 ```
 
